# opengl-template

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt  config.h  main.cpp  triangle_mesh.cpp  triangle_mesh.h
